--- a/src/App.scss
+++ b/src/App.scss
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Dosis:wght@300;500&display=swap');
+
 .App{
     height: 100%;
     width: 100%;
@@ -6,6 +8,61 @@
         height: 100vh;
         width: 100vw;
         position: fixed;
-        border: 2px solid green;
+        display: flex;
+        justify-content: space-between;
+        padding: 40px;
+
+        .header{
+            height: fit-content;
+            display: flex;
+            justify-content: space-between;
+
+
+            .header-left{
+                width: fit-content;
+                display: flex;
+                gap: 5vw;
+
+                .menu-btn{
+                    height: 24px;
+                    width: 24px;
+                    padding: 2px;
+                    display: flex;
+                    flex-direction: column;
+                    justify-content: space-around;
+
+                    .line{
+                        height: 5%;
+                        width: 100%;
+                        background-color: black;
+                    }
+                }
+
+                .logo-zara{
+                    height: 128px;
+                    width: fit-content;
+                }
+            }
+            .header-right{
+                width: fit-content;
+                display: flex;
+                gap: 20px;
+                font-size: 1rem;
+
+                .hr-elem{
+                    height: fit-content;
+                    width: fit-content;
+                }
+
+                .search-bar{
+                    padding-right: 2.5vw;
+                    padding-bottom: 2.5px;
+                    margin-right: 5vw;
+                    border-bottom: 1px solid black;
+                    font-weight: 500;
+                }
+            }
+        }
+
     }
 }
