--- a/src/index.scss
+++ b/src/index.scss
@@ -1,9 +1,13 @@
+@import url('https://fonts.googleapis.com/css2?family=Dosis:wght@300;500&display=swap');
 *{
   height: 100%;
   width: 100%;
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  // font-family: Helvetica, sans-serif;
+  font-family: 'Dosis', sans-serif;
+  font-weight: 300;
 
   .page{
     overflow: hidden;
